nickel-lang-lib/tests/integration/fail/parsing/unexpected_token/in_record.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'ParseError'
{ name = "Nickel", , }